# afteragent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-llm-diagnosis.md  2026-04-10-transcript-ingestion.md  2026-04-11-effectiveness-pruning.md  2026-04-11-generic-diagnosis.md
docs/superpowers/specs/: 2026-04-10-llm-diagnosis-design.md  2026-04-10-transcript-ingestion-design.md  2026-04-11-effectiveness-pruning-design.md  2026-04-11-generic-diagnosis-design.md
scripts/: e2e_matrix.sh
src/afteraction/: __init__.py  capture.py  cli.py  config.py  github.py  models.py  workflow.py
src/afteragent/: __init__.py  adapters.py  capture.py  cli.py  compression.py  config.py  diagnostics.py  diagnostics_generic.py  effectiveness.py  mcp_server.py  memory.py  models.py  recommendations.py  session.py  store.py  transcripts.py  ui.py
src/afteragent/llm/: __init__.py  anthropic_client.py  client.py  config.py  cost_table.py  enhancer.py  merge.py  openai_client.py  prompts.py  schemas.py
tests/: test_adapters.py  test_adapters_claude_code.py  test_adapters_codex.py  test_adapters_generic.py  test_capture.py  test_cli.py  test_diagnostics.py  test_diagnostics_generic.py  test_diagnostics_llm_hook.py  test_e2e.py  test_effectiveness.py  test_github.py  test_llm_client.py  test_llm_config.py  test_llm_cost_table.py  test_llm_enhancer.py  test_llm_merge.py  test_llm_prompts.py  test_llm_schemas.py  test_session.py  test_store_llm.py  test_store_task_prompt.py  test_transcripts.py  test_ui.py  test_workflow.py
tests/fixtures/transcripts/claude_code/: continued_session.jsonl  ignored_review.jsonl  malformed.jsonl  simple_edit_run.jsonl
tests/fixtures/transcripts/codex/: simple_run.txt  (+1 more)
(+2 files in other folders)
