[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afteraction"
version = "0.1.0"
description = "Capture agent runs, diagnose failure patterns, and generate workflow interventions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
afteraction = "afteraction.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
